--- a/2022/May/12th.md
+++ b/2022/May/12th.md
@@ -1,5 +1,5 @@
-Leetcode:
-c++:
+Leetcode:\
+c++:\
   [2267. Check if There Is a Valid Parentheses String Path](https://github.com/Double-T1/leetcode/blob/main/2201-2400/2267.%20Check%20if%20There%20Is%20a%20Valid%20Parentheses%20String%20Path/solution.cpp)\
   416. Partition Equal Subset Sum\
   47. Permutations II\
