--- a/2022/May/13th.md
+++ b/2022/May/13th.md
@@ -2,4 +2,9 @@ Leetcode:\
 C++:\
   [117. Populating Next Right Pointers in Each Node II](https://github.com/Double-T1/leetcode/tree/main/1-200/117.%20Populating%20Next%20Right%20Pointers%20in%20Each%20Node%20II)\
 [123. Best Time to Buy and Sell Stock III](https://github.com/Double-T1/leetcode/tree/main/1-200/123.%20Best%20Time%20to%20Buy%20and%20Sell%20Stock%20III)\
-[188. Best Time to Buy and Sell Stock IV](https://github.com/Double-T1/leetcode/tree/main/1-200/188.%20Best%20Time%20to%20Buy%20and%20Sell%20Stock%20IV)
+[188. Best Time to Buy and Sell Stock IV](https://github.com/Double-T1/leetcode/tree/main/1-200/188.%20Best%20Time%20to%20Buy%20and%20Sell%20Stock%20IV)\
+[542. 01 Matrix](https://github.com/Double-T1/leetcode/tree/main/400-600/542.%2001%20Matrix)\
+[1206. Design Skiplist](https://github.com/Double-T1/leetcode/tree/main/1200-1400/1206.%20Design%20Skiplist)\
+
+Algo:\
+Skiplist
