--- a/2022/May/14th.md
+++ b/2022/May/14th.md
@@ -1,3 +1,4 @@
 Leetcode:\
 c++:\
-[743. Network Delay Time](https://github.com/Double-T1/leetcode/tree/main/600-800/743.%20Network%20Delay%20Time)\
+[743. Network Delay Time](https://github.com/Double-T1/leetcode/tree/main/600-800/743.%20Network%20Delay%20Time)
+
