--- a/2022/May/14th.md
+++ b/2022/May/14th.md
@@ -1,4 +1,6 @@
 Leetcode:\
 c++:\
-[743. Network Delay Time](https://github.com/Double-T1/leetcode/tree/main/600-800/743.%20Network%20Delay%20Time)
-
+[743. Network Delay Time](https://github.com/Double-T1/leetcode/tree/main/600-800/743.%20Network%20Delay%20Time)\
+[2269. Find the K-Beauty of a Number](https://github.com/Double-T1/leetcode/tree/main/2201-2400/2269.%20Find%20the%20K-Beauty%20of%20a%20Number)\
+[2270. Number of Ways to Split Array](https://github.com/Double-T1/leetcode/tree/main/2201-2400/2270.%20Number%20of%20Ways%20to%20Split%20Array)\
+[2271. Maximum White Tiles Covered by a Carpet](https://github.com/Double-T1/leetcode/tree/main/2201-2400/2271.%20Maximum%20White%20Tiles%20Covered%20by%20a%20Carpet)\
