--- a/2022/May/15th.md
+++ b/2022/May/15th.md
@@ -6,3 +6,4 @@ c++:\
 [2274. Maximum Consecutive Floors Without Special Floors](https://github.com/Double-T1/leetcode/tree/main/2201-2400/2274.%20Maximum%20Consecutive%20Floors%20Without%20Special%20Floors)\
 [2273. Find Resultant Array After Removing Anagrams](https://github.com/Double-T1/leetcode/tree/main/1200-1400/1302.%20Deepest%20Leaves%20Sum)\
 [1456. Maximum Number of Vowels in a Substring of Given Length](https://github.com/Double-T1/leetcode/new/main/1200-1400/1302.%20Deepest%20Leaves%20Sum)\
+[1302. Deepest Leaves Sum](https://github.com/Double-T1/leetcode/blob/main/1200-1400/1302.%20Deepest%20Leaves%20Sum/solution.cpp)\
