--- a/2022/May/15th.md
+++ b/2022/May/15th.md
@@ -7,3 +7,4 @@ c++:\
 [2273. Find Resultant Array After Removing Anagrams](https://github.com/Double-T1/leetcode/tree/main/1200-1400/1302.%20Deepest%20Leaves%20Sum)\
 [1456. Maximum Number of Vowels in a Substring of Given Length](https://github.com/Double-T1/leetcode/new/main/1200-1400/1302.%20Deepest%20Leaves%20Sum)\
 [1302. Deepest Leaves Sum](https://github.com/Double-T1/leetcode/blob/main/1200-1400/1302.%20Deepest%20Leaves%20Sum/solution.cpp)\
+[1932. Merge BSTs to Create Single BST](https://github.com/Double-T1/leetcode/tree/main/1800-2000/1932.%20Merge%20BSTs%20to%20Create%20Single%20BST) 
