--- a/2022/May/17th.md
+++ b/2022/May/17th.md
@@ -1,3 +1,4 @@
 Leetcode:\
 c++:\
 [1932. Merge BSTs to Create Single BST](https://github.com/Double-T1/leetcode/tree/main/1800-2000/1932.%20Merge%20BSTs%20to%20Create%20Single%20BST)\
+[146. LRU Cache](https://leetcode.com/problems/lru-cache/)
