--- a/2022/May/19th.md
+++ b/2022/May/19th.md
@@ -1,4 +1,9 @@
 Leetcode:\
 c++:\
 [329. Longest Increasing Path in a Matrix](https://github.com/Double-T1/leetcode/tree/main/200-400/329.%20Longest%20Increasing%20Path%20in%20a%20Matrix)\
-[1444. Number of Ways of Cutting a Pizza](https://github.com/Double-T1/leetcode/tree/main/1400-1600/1444.%20Number%20of%20Ways%20of%20Cutting%20a%20Pizza)
+[1444. Number of Ways of Cutting a Pizza](https://github.com/Double-T1/leetcode/tree/main/1400-1600/1444.%20Number%20of%20Ways%20of%20Cutting%20a%20Pizza)\
+
+
+DSA:\
+[Critical Edges](https://github.com/Double-T1/Algorithm-and-Data-structure-/tree/main/Graph/Strongly%20Connected%20Components)\
+
