--- a/2022/May/23rd.md
+++ b/2022/May/23rd.md
@@ -7,3 +7,4 @@ c++:\
 [949. Largest Time for Given Digits](https://github.com/Double-T1/leetcode/tree/main/800-1000/949.%20Largest%20Time%20for%20Given%20Digits)\
 [561. Array Partition I](https://github.com/Double-T1/leetcode/blob/main/400-600/561.%20Array%20Partition%20I/solution.cpp)\
 [7. Reverse Integer](https://github.com/Double-T1/leetcode/tree/main/1-200/7.%20Reverse%20Integer)\
+[140. Word Break II](https://github.com/Double-T1/leetcode/tree/main/1-200/140.%20Word%20Break%20II)
